--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -15,6 +15,7 @@
 @import '_helpers/columns';
 @import '_helpers/circles';
 @import '_helpers/rectangles';
+@import '_helpers/symbol_codes';
 @import '_helpers/symbols';
 @import '_helpers/triangles';
 @import '_helpers/stars';
