Generating the whole font locally

--- a/app/styles/_flags/afg.scss
+++ b/app/styles/_flags/afg.scss
@@ -6,7 +6,7 @@
   $left: #000;
   $center: #BF0000;
   $right: #009900;
-  $symbol: $UTF8_COUNTRY_AFG;
+  $symbol: $UTF8_AFG;
   $symbol-color: #FFF;
   // Note: Technically, the width and height of the symbol are slighly different
   // I chose to use the same, though
