--- a/app/styles/_flags/ago.scss
+++ b/app/styles/_flags/ago.scss
@@ -5,7 +5,7 @@
   $unit: $h100;
   $red: #CE1126;
   $black: #000;
-  $symbol: $UTF8_COUNTRY_AGO;
+  $symbol: $UTF8_AGO;
   $yellow: #F9D616;
   $symbol-size: 54 * $unit;
 
