--- a/app/styles/_flags/alb.scss
+++ b/app/styles/_flags/alb.scss
@@ -6,7 +6,7 @@
   $unit: $height / 30;
   $red: #da291c;
   $black: #000;
-  $symbol: $UTF8_COUNTRY_ALB;
+  $symbol: $UTF8_ALB;
   $symbol-height: 20 * $unit;
   $symbol-width: 18 * $unit;
   $symbol-left: 21 * $unit;
