--- a/app/styles/_flags/atg.scss
+++ b/app/styles/_flags/atg.scss
@@ -14,7 +14,7 @@
   $blue-height: 20 * $unit;
   $white-height: 36 * $unit;
 
-  $star-symbol: $UTF8_COUNTRY_ATG;
+  $star-symbol: $UTF8_ATG;
   $star-size: 60 * $unit;
   $star-left: 69 * $unit;
   $star-top: 36 * $unit;
