--- a/app/styles/_flags/egy.scss
+++ b/app/styles/_flags/egy.scss
@@ -13,7 +13,7 @@
   @include three-lines($red, $white, $black);
 
   &:before {
-    @include centered-symbol($UTF8_COUNTRY_EGY, $yellow, $symbol-height);
+    @include centered-symbol($UTF8_EGY, $yellow, $symbol-height);
   }
 
 };
