--- a/app/styles/_flags/isr.scss
+++ b/app/styles/_flags/isr.scss
@@ -9,7 +9,7 @@
   $border-height: 3 * $unit;
   $blue-height: 5 * $unit;
   $center-height: 16 * $unit;
-  $star-symbol: $UTF8_STAR_OF_DAVID;
+  $star-symbol: $UTF8_ISR;
   $star-size: 14 * $unit;
 
   @include lines($white, $border-height,
