--- a/app/styles/_flags/lbn.scss
+++ b/app/styles/_flags/lbn.scss
@@ -12,6 +12,6 @@
 
   @include lines($red, 25%, $white, 50%, $red, 25%);
   &:before {
-    @include centered-symbol($UTF8_COUNTRY_LBN, $green, $symbol-size);
+    @include centered-symbol($UTF8_LBN, $green, $symbol-size);
   }
 };
