--- a/app/styles/_flags/mar.scss
+++ b/app/styles/_flags/mar.scss
@@ -5,7 +5,7 @@
   $unit: $h12;
   $red: #C1272D;
   $green: #006233;
-  $star-symbol: $UTF8_PENTAGRAM;
+  $star-symbol: $UTF8_MAR;
   $star-size: 4 * $unit;
 
   background-color: $red;
