--- a/app/styles/_flags/mys.scss
+++ b/app/styles/_flags/mys.scss
@@ -18,7 +18,7 @@
   $crescent-back-size: 96 * $unit;
   $crescent-back-left: 92 * $unit;
   $crescent-back-top: 64 * $unit;
-  $star-symbol: $UTF8_COUNTRY_MYS;
+  $star-symbol: $UTF8_MYS;
   $star-size: 80 * $unit;
   $star-left: 140 * $unit;
   $star-top: 64 * $unit;
