--- a/app/styles/_flags/png.scss
+++ b/app/styles/_flags/png.scss
@@ -9,7 +9,7 @@
   $black: #000;
   $white: #FFF;
 
-  $bird: $UTF8_COUNTRY_PNG;
+  $bird: $UTF8_PNG;
   $bird-size: 32 * $unit;
   $bird-left: 64 * $unit;
   $bird-top: 23 * $unit;
