--- a/app/styles/_flags/vut.scss
+++ b/app/styles/_flags/vut.scss
@@ -53,7 +53,7 @@
   }
 
   &:after {
-    @include symbol($UTF8_COUNTRY_VUT, $yellow, $symbol-size, $symbol-left, $symbol-top);
+    @include symbol($UTF8_VUT, $yellow, $symbol-size, $symbol-left, $symbol-top);
   }
 
 
