--- a/app/styles/_flags/ncl.scss
+++ b/app/styles/_flags/ncl.scss
@@ -22,7 +22,7 @@
     @include circle-pseudo($yellow, $circle-size, $circle-left, $circle-top);
   }
   &:after {
-    @include symbol($UTF8_COUNTRY_NCL, $black, $symbol-size, $symbol-left, $symbol-top);
+    @include symbol($UTF8_NCL, $black, $symbol-size, $symbol-left, $symbol-top);
   }
 
 };
