--- a/app/styles/_flags/png.scss
+++ b/app/styles/_flags/png.scss
@@ -17,7 +17,7 @@
   $stripe-angle: atan($width / $height) * 1deg;
   $stripe-distance: sin($stripe-angle) * $height;
 
-  $stars: $UTF8_BLACK_STAR+$UTF8_BLACK_STAR;
+  $stars: "#{$UTF8_BLACK_STAR}#{$UTF8_BLACK_STAR}";
   $star-size: 10 * $unit;
   $star-left: 24 * $unit;
   $star-top: 27 * $unit;
@@ -35,12 +35,13 @@
   // The second one we'll hide with the same color as the background and add
   // text-shadow to place where we want it
   &:before {
-    @include symbol($stars, $black, $star-size-small, $star-left, $star-top);
+    @include symbol($stars, transparent, $star-size-small, $star-left, $star-top);
     position: relative; // position: absolute breaks :first-letter
     text-shadow: 0px (22 * $unit) 0px $white;
   }
   // Normal stars
   &:first-letter {
+    font-family: Symbols;
     font-size: $star-size;
     height: $star-size;
     line-height: $star-size;
