--- a/app/styles/_helpers/helper.scss
+++ b/app/styles/_helpers/helper.scss
@@ -64,6 +64,7 @@
   $h432:$height/432 !global;
   $h504:$height/504 !global;
   $h720:$height/720 !global;
+  $h800:$height/800 !global;
   $h1500:$height/1500 !global;
   $h2880:$height/2880 !global;
   $h6000:$height/6000 !global;
