--- a/app/styles/_helpers/symbol_codes.scss
+++ b/app/styles/_helpers/symbol_codes.scss
@@ -41,13 +41,15 @@ $UTF8_MYS: '\e624';
 $UTF8_NAM: '\e625';
 $UTF8_NCL: '\e626';
 $UTF8_NFK: '\e627';
-$UTF8_NRU: '\e628';
-$UTF8_PHL: '\e629';
-$UTF8_PNG: '\e62a';
-$UTF8_RWA: '\e62b';
-$UTF8_SAU: '\e62c';
-$UTF8_STAR_6_POINTS: '\e62d';
-$UTF8_STAR_COMMONWEALTH: '\e62e';
-$UTF8_TJK: '\e62f';
-$UTF8_TWN: '\e630';
-$UTF8_VUT: '\e631';
+$UTF8_NPL_CRESCENT: '\e628';
+$UTF8_NPL_STAR: '\e629';
+$UTF8_NRU: '\e62a';
+$UTF8_PHL: '\e62b';
+$UTF8_PNG: '\e62c';
+$UTF8_RWA: '\e62d';
+$UTF8_SAU: '\e62e';
+$UTF8_STAR_6_POINTS: '\e62f';
+$UTF8_STAR_COMMONWEALTH: '\e630';
+$UTF8_TJK: '\e631';
+$UTF8_TWN: '\e632';
+$UTF8_VUT: '\e633';
