Fix the flag of China stars rotating issue #11
1. Create helper function to link polygen points.
2. Draw five angle stars with polygen() for css clip-path.

--- a/app/styles/_flags/bra.scss
+++ b/app/styles/_flags/bra.scss
@@ -78,7 +78,7 @@
   //   // top: ($height - $circle-width) / 2;
   //   // left: ($width - $circle-width) / 2;
   //   // background-color: $white;
-  //   clip-path: five-pointed-star($circle-width, 100px, 100px);
+  //   clip-path: polygon(five-pointed-star($circle-width, 100px, 100px));
   // }
 };
 
