Adding comments on the clever way to draw stars

--- a/app/styles/_flags/chn.scss
+++ b/app/styles/_flags/chn.scss
@@ -6,6 +6,8 @@
   $red: #de2910;
   $yellow: #FDDA24;
   $star-size: 6 * $unit;
+  $star-offset-top: 5 * $unit;
+  $star-offset-left: 5 * $unit;
   $star-size-small: 2 * $unit;
 
   background-color: $red;
@@ -16,8 +18,8 @@
     width: $width;
     height: $height;
     background: $yellow;
-    clip-path: polygon(link_list(
-      five-pointed-star($star-size, 5 * $unit, 5 * $unit),
+    clip-path: polygon(link_polygons(
+      five-pointed-star($star-size, $star-offset-left, $star-offset-top),
       five-pointed-star($star-size-small, 10 * $unit, 2 * $unit, -120.96),
       five-pointed-star($star-size-small, 12 * $unit, 4 * $unit, -98.13),
       five-pointed-star($star-size-small, 12 * $unit, 7 * $unit, -74.055),
